WIP: highlevelschema api integration
